--- a/.github/workflows/sonarqube-tm.yml
+++ b/.github/workflows/sonarqube-tm.yml
@@ -46,13 +46,13 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - development
 
 
 jobs:
   build:
     name: Build and analyze
-    runs-on: [local]
+    runs-on: http://localhost:9000/
     
     steps:
         - uses: actions/checkout@v4
